--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -25,7 +25,56 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from fastcore.test import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"Say Hello\"\n",
+    "    return (f'Hello {to}!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this to say hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Jimmy!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"Jimmy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_eq(say_hello(\"Jimmy\"), \"Hello Jimmy!\")"
    ]
   },
   {
