--- a/index.ipynb
+++ b/index.ipynb
@@ -7,23 +7,23 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from nbdev_test.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Welcome to nbdev_test Tutorial\n",
     "\n",
-    "> Summary description here."
+    "> Please check the websites"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "Hope you easily follow this."
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Examples"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello jimmy!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello('jimmy')"
    ]
   },
   {
